# gpt-connector

./: .env.example  .gitattributes  .gitignore  README.md  gpt-actions.openapi.yaml  ngrok.bat  pyproject.toml  run.bat  run.sh
.github/release-notes/: v0.1.4.md
.github/workflows/: release-standalone.yml
docs/: gpt-action-test-prompts.md
localcontrol/: __init__.py  approvals.py  artifacts_ops.py  audit.py  auth.py  cli.py  config.py  config_store.py  console.py  errors.py  execution_log.py  fs_ops.py  git_ops.py  launcher_ui.py  main.py  middleware.py  models.py  ngrok_values.py  openapi_export.py  platform_support.py  process_ops.py  project_ops.py  redaction.py  safety.py  search_ops.py  shell_ops.py  system_ops.py  terminal_ops.py  utils.py
localcontrol/api/: __init__.py  app.py  deps.py
localcontrol/api/routes/: __init__.py  approvals.py  artifacts.py  config.py  execution.py  filesystem.py  jobs.py  process.py  projects.py  search.py  shell.py  system.py  terminal.py  ui.py
localcontrol/web/: index.html
scripts/: build-exe.ps1  build-exe.sh  export_openapi.py  install-startup-task.ps1  run.ps1
tests/: conftest.py  test_artifacts_terminal.py  test_auth_and_system.py  test_config_ui.py  test_files_search_and_approvals.py  test_git.py  test_git_shell.py  test_launcher_ui.py  test_ngrok_token.py  test_projects.py  test_shell.py
